bk_ida/gobmkida/c3/aftermath_genmove
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/engine/aftermath.c:911:6: error: use of undeclared identifier 'byte_9C689F'
if ( byte_9C689F[i * 2] != 3 ) 
     ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/engine/aftermath.c:1286:30: error: use of undeclared identifier 'byte_9C688C'
if ( v9 == ( unsigned __int8)byte_9C688C[v67] ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/engine/aftermath.c:1297:4: error: use of undeclared identifier 'byte_9C688D'
|| byte_9C688D[v67] != 3 && !*( &v213 + v67)) ) 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/engine/aftermath.c:1384:30: error: use of undeclared identifier 'invalid_operation'
if ( !( ( v151 + v152 < 0) ^ __OFADD__( v151, v152) | ( v151 + v152 == 0)) ) 
                             ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/engine/aftermath.c:370:25: note: expanded from macro '__OFADD__'
#define __OFADD__(x, y) invalid_operation // Generate overflow flag for (x+y)
                        ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/aftermath_genmove/src/obj/1/aftermath.o] Error 1
